# game_6

./: Cargo.toml
assets/maps/: test.ldtk
assets/textures/: Sprite-0001.ase
src/: camera.rs  components.rs  lib.rs  loader.rs  main.rs  map.rs  menu.rs  player.rs  weapon.rs
