[package]
name = "game_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_asset_loader = {version = "0.15.0", features = ["2d"]}
bevy-inspector-egui = "0.18.1"
bevy_rapier2d = { version = "0.21.0", features = ["debug-render-2d" ] }
bevy_ecs_ldtk = "0.7.0"
leafwing-input-manager = "0.9.2"